# cuds

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  README.md  cuds.pc  meson.build
cmake/templates/: cuds.pc.in  cudsConfig.cmake.in
cmake/toolchains/: linux-gcc.cmake  windows-ucrt64-gcc.cmake
include/: CMakeLists.txt  meson.build
include/cuds/: algorithm.h  cuds.h  export.h  main.h  platform.h  string.h  types.h  units.h  value.h  version.h
sample/cuds-intro/: README.md  meson.build  meson_options.txt
sample/cuds-intro/src/: hello.c
sample/cuds_intro/: CMakeLists.txt  README.md
sample/cuds_intro/src/: hello.c  hello.h
src/: CMakeLists.txt  cuds.c  cuds_internal.h  meson.build
src/main/: main.c
src/string/: string.c  string_internal.c  string_internal.h
src/value/: value.c
src/version/: revision.c.in  version.c
test/: test_main.c
tests/: CMakeLists.txt  meson.build  test_cuds.c  test_string.c  test_version.c
